--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "e1cho \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js"
   },
   "author": "jenil",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "date-and-time": "^3.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
